# NOVA

./: .gitignore  .gitmodules  LICENSE  README.md
hardware/cad/: Full Assembly v44.step
hardware/cad/stls/: Base Arm v26.stl  Base Cap v25.stl  Base v19.stl  End Arm v12.stl  Head Charger v5.stl  Head Stand v18.stl  Head v38.stl  Middle Arm v20.stl
hardware/pcb/: NOVA Head PCB v25.f3z
pi3b/: CMakeLists.txt  setup_deps.sh
pi3b/apps/: main.cpp
pi3b/include/nova/: ServerClient.hpp
pi3b/include/nova/audio/: PorcupineHandler.hpp  doa_gcc_phat.hpp
pi3b/models/: Hey-Nova_en_raspberry-pi_v3_0_0.ppn
pi3b/src/: ServerClient.cpp
pi3b/src/audio/: PorcupineHandler.cpp
pi3b/tests/: recording_test.cpp
pi4b/: CMakeLists.txt  capture.cpp  capture.hpp  find_dir.cpp  main.cpp
pi4b/apps/: main.cpp
pi4b/src/audio/: AlsaCapture.cpp  doa_gcc_phat.cpp
pico/: CMakeLists.txt  CMakePresets.json  main.c
pico/.cache/clangd/index/: FreeRTOS.h.931C99C077600900.idx  FreeRTOSConfig.h.A61004BDF95D509D.idx  address_mapped.h.5761EC9481C653C3.idx  address_mapped.h.8B04134A79F13845.idx  addressmap.h.473B56804F03E6BE.idx  addressmap.h.ABFB34DAF190DB46.idx  arch_threadsafe_background.h.5553EF6A686F3C42.idx  arch_threadsafe_background.h.62BEAC91B67CE826.idx  asm_helper.S.15B17F91CBD32970.idx  asm_helper.S.EFFE128F9DA43C50.idx  assert.h.A9D2EE0390505493.idx  assert.h.F3456D722FFDDD18.idx  async_context.h.AAD319BDAD618E16.idx  async_context.h.B37386E9A8F9A6FA.idx  async_context_base.c.3BCF5C68A9882558.idx  async_context_base.c.9AA0D54A9D1BB320.idx  async_context_base.h.59EF50C94E2B3CDF.idx  async_context_base.h.98228A87BE8F8A7C.idx  async_context_threadsafe_background.c.AA128668593C82FC.idx  async_context_threadsafe_background.c.F279B08DF8F6E486.idx  async_context_threadsafe_background.h.0C15D6A70DF1A7C6.idx  async_context_threadsafe_background.h.1D3617746B6E0E7B.idx  atomic.c.563B9E4259DBCB92.idx  atomic.c.E418915ABAFFD0CE.idx  binary_info.h.838C6D4847D60AC9.idx  binary_info.h.85F81C25BD054F69.idx  bit_ops_aeabi.S.802C80443C13DB7F.idx  bit_ops_aeabi.S.BDD8DACD41413092.idx  blink.c.D0A2E14A9D186E08.idx  boot2_w25q080.S.1DBDD910DC892EEB.idx  boot2_w25q080.S.41891AEC2E282AC5.idx  boot_lock.c.1001C5005C63E0CB.idx  boot_lock.c.42580DC2D12939F0.idx  boot_lock.h.4C6BCD2BE93BC3F4.idx  boot_lock.h.C6E466E7BCAF27B3.idx  bootrom.c.C0ED9E688E78E652.idx  bootrom.c.E4175CEADD59B7CA.idx  bootrom.h.B9D7CA29CBC1FB4E.idx  bootrom.h.D1D5CA6443AC3EED.idx  bootrom_constants.h.36231FEFA9EA7F92.idx  (+447 more)
pico/freertos/: FreeRTOSConfig.h
pico/src/: main.c
zero/: CMakeLists.txt  main.cpp
